syntax="proto3";
package entity;
message TrajectoryFile{
    string name = 1;
    
}